--- a/config.toml
+++ b/config.toml
@@ -1,2 +1,3 @@
-languageCode = "en-us"
-title = "My New Netlify Victor Hugo Site"
+languageCode = "fr"
+title = "Transport Blog Test"
+publish_mode = "editorial_workflow"
