--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: git-gateway
+  name: github
+  repo:  fchabouis/test-hugo-cms 
   open_authoring: true
 
 publish_mode: editorial_workflow
